Implements new ui -- Content added

--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <title>Gustav Schwarzbach - Portfolio</title>
 
     <!-- SEO & Meta -->
-    <meta name="description" content="Digital portfolio by Gustav Schwarzbach – student of Media Informatics with projects in game design, UI, and programming.">
+    <meta name="description" content="Digital portfolio by Gustav Schwarzbach – student of Media Informatics with projects in game design, UI, and programming." id="meta-description">
     <meta name="author" content="Gustav Schwarzbach">
-            <meta name="theme-color" content="#EFEFEF">
+    <meta name="theme-color" content="#EFEFEF">
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="./manifest.webmanifest">
 
     <!-- Favicon -->
     <link rel="icon" href="site/icons/icon-192.png" type="image/png">
+    <link rel="apple-touch-icon" href="site/icons/icon-192.png">
 
     <!-- Open Graph / Social Preview -->
-    <meta property="og:title" content="Gustav Schwarzbach – Portfolio">
-    <meta property="og:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta property="og:title" content="Gustav Schwarzbach – Portfolio" id="og-title">
+    <meta property="og:description" content="Explore game design, creative coding and UI/UX projects." id="og-description">
     <meta property="og:image" content="https://gustavszb.com/site/icons/icon-512.png">
     <meta property="og:url" content="https://gustavszb.com/">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio">
-    <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects.">
+    <meta name="twitter:title" content="Gustav Schwarzbach – Portfolio" id="twitter-title">
+    <meta name="twitter:description" content="Explore game design, creative coding and UI/UX projects." id="twitter-description">
     <meta name="twitter:image" content="https://gustavszb.com/site/icons/icon-512.png">
 
     <!-- Fonts & Styles -->
@@ -53,7 +54,12 @@
             <div class="nav-menu">
                 <a href="#home" class="nav-link" id="nav-home">Home</a>
                 <a href="#about" class="nav-link" id="nav-about">About</a>
-                <a href="#projects" class="nav-link" id="nav-projects">Projects</a>
+                <div class="nav-projects-container">
+                    <a href="#projects" class="nav-link" id="nav-projects">Projects</a>
+                    <div class="nav-projects-dropdown" id="nav-projects-dropdown">
+                        <!-- Dropdown items will be populated by JavaScript -->
+                    </div>
+                </div>
                 <a href="#contact" class="nav-link" id="nav-contact">Contact</a>
                 <button class="lang-toggle" id="lang-toggle" aria-label="Toggle language">
                     <svg class="lang-toggle-icon" xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 0 24 24" width="20px">
@@ -97,27 +103,12 @@
         <!-- About Section -->
         <section id="about" class="about-section">
             <div class="container">
-                <h2 class="section-title">About Me</h2>
+                <h2 class="section-title" id="about-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>As a Media Informatics student at HTW Dresden, I combine technical expertise with creative vision to build meaningful digital experiences.</p>
-                        <div class="skills-grid">
-                            <div class="skill-item">
-                                <h3>Programming</h3>
-                                <p>C#, C++, Java, Processing</p>
-                            </div>
-                            <div class="skill-item">
-                                <h3>Design</h3>
-                                <p>UI/UX, 3D Modeling, Graphics</p>
-                            </div>
-                            <div class="skill-item">
-                                <h3>Tools</h3>
-                                <p>Blender, Photoshop, Illustrator</p>
-                            </div>
-                            <div class="skill-item">
-                                <h3>Focus</h3>
-                                <p>Game Design, Cybersecurity</p>
-                            </div>
+                        <p id="about-description">As a Media Informatics student at HTW Dresden, I combine technical expertise with creative vision to build meaningful digital experiences.</p>
+                        <div class="skills-grid" id="skills-grid">
+                            <!-- Skills will be loaded from JSON -->
                         </div>
                     </div>
                 </div>
@@ -127,7 +118,7 @@
         <!-- Projects Section -->
         <section id="projects" class="projects-section">
             <div class="container">
-                <h2 class="section-title">Projects</h2>
+                <h2 class="section-title" id="projects-title">Projects</h2>
                 <div class="projects-container" id="projects-container">
                     <!-- Project sections will be dynamically loaded -->
                 </div>
@@ -137,10 +128,10 @@
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
             <div class="container">
-                <h2 class="section-title">Let's Connect</h2>
+                <h2 class="section-title" id="contact-title">Let's Connect</h2>
                 <div class="contact-content">
                     <div class="contact-text">
-                        <p>I'm currently open to internships, working student positions, and collaborative opportunities in tech and design fields.</p>
+                        <p id="contact-description">I'm currently open to internships, working student positions, and collaborative opportunities in tech and design fields.</p>
                     </div>
                     <div class="contact-links" id="contact-links">
                         <!-- Contact links will be loaded from JSON -->
@@ -159,17 +150,43 @@
                 </div>
                 <div class="footer-links" id="footer-links">
                     <!-- Footer links will be loaded from JSON -->
-                </div>
+                </div>  
             </div>
         </div>
     </footer>
 
     <!-- Fullscreen Image Modal -->
     <div id="fullscreen-container" class="fullscreen-modal">
+        <img id="fullscreen-image" class="fullscreen-image" alt="Fullscreen view">
         <button id="close-button" class="modal-close">&times;</button>
         <button id="prev-button" class="nav-button nav-prev">&#8249;</button>
         <button id="next-button" class="nav-button nav-next">&#8250;</button>   
-        <img id="fullscreen-image" class="fullscreen-image" alt="Fullscreen view">
+    </div>
+
+    <!-- Imprint Modal -->
+    <div id="imprint-modal" class="legal-modal">
+        <div class="legal-modal-content">
+            <div class="legal-modal-header">
+                <h2 id="imprint-title">Impressum</h2>
+                <button class="legal-modal-close" id="imprint-close">&times;</button>
+            </div>
+            <div class="legal-modal-body" id="imprint-content">
+                <!-- Content will be loaded from config -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Privacy Modal -->
+    <div id="privacy-modal" class="legal-modal">
+        <div class="legal-modal-content">
+            <div class="legal-modal-header">
+                <h2 id="privacy-title">Datenschutz</h2>
+                <button class="legal-modal-close" id="privacy-close">&times;</button>
+            </div>
+            <div class="legal-modal-body" id="privacy-content">
+                <!-- Content will be loaded from config -->
+            </div>
+        </div>
     </div>
 
     <!-- Scripts -->
